fix: replace classname visible with hidden for clear semantics

--- a/styles/custom.css
+++ b/styles/custom.css
@@ -8,7 +8,7 @@ a:visited {
   text-align: center;
 }
 
-.visible {
+.hidden {
   display: none !important;
 }
 .img-responsive {
